--- a/backend/SmartResume.API/SmartResume.API.csproj
+++ b/backend/SmartResume.API/SmartResume.API.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
+        <PackageReference Include="Microsoft.Extensions.AI.Ollama" Version="9.6.0-preview.1.25310.2" />
+        <PackageReference Include="OpenAI" Version="2.2.0-beta.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
     </ItemGroup>
 
