--- a/backend/SmartResume.Application/SmartResume.Application.csproj
+++ b/backend/SmartResume.Application/SmartResume.Application.csproj
@@ -8,5 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+      <PackageReference Include="Microsoft.Extensions.AI" Version="9.6.0" />
+      <PackageReference Include="OpenAI" Version="2.2.0-beta.4" />
     </ItemGroup>
 </Project>
